src/component/toast/snapshots/envision__component__toast__tests__view_info_style.snap
---
source: src/component/toast/tests.rs
expression: terminal.backend().to_string()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                        ┌──────────────────────────────────────┐
                                        │[i] Info message                      │
                                        └──────────────────────────────────────┘
