src/component/toast/snapshots/envision__component__toast__tests__view_max_visible.snap
---
source: src/component/toast/tests.rs
expression: terminal.backend().to_string()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                        ┌──────────────────────────────────────┐
                                        │[i] Message 2                         │
                                        └──────────────────────────────────────┘
                                        ┌──────────────────────────────────────┐
                                        │[i] Message 3                         │
                                        └──────────────────────────────────────┘
