src/component/toast/snapshots/envision__component__toast__tests__view_multiple.snap
---
source: src/component/toast/tests.rs
expression: terminal.backend().to_string()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                        ┌──────────────────────────────────────┐
                                        │[i] Message 1                         │
                                        └──────────────────────────────────────┘
                                        ┌──────────────────────────────────────┐
                                        │[+] Message 2                         │
                                        └──────────────────────────────────────┘
                                        ┌──────────────────────────────────────┐
                                        │[x] Message 3                         │
                                        └──────────────────────────────────────┘
