src/component/toast/snapshots/envision__component__toast__tests__view_multiple_toasts.snap
---
source: src/component/toast/tests.rs
expression: terminal.backend().to_string()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                        ┌──────────────────────────────────────┐
                                        │[i] Information message               │
                                        └──────────────────────────────────────┘
                                        ┌──────────────────────────────────────┐
                                        │[!] Warning message                   │
                                        └──────────────────────────────────────┘
                                        ┌──────────────────────────────────────┐
                                        │[x] Error message                     │
                                        └──────────────────────────────────────┘
