src/component/toast/snapshots/envision__component__toast__tests__view_single.snap
---
source: src/component/toast/tests.rs
expression: terminal.backend().to_string()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                        ┌──────────────────────────────────────┐
                                        │[i] Hello, world!                     │
                                        └──────────────────────────────────────┘
